<resources>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="scan_title">二维码/条形码</string>
    <string name="developing">程序猿和美工正在努力开发ing...</string>
    <string name="develop_click">点击任意位置传送到测试</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="save">保存</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="week">周</string>
    <string name="day">日</string>
    <string name="hour">小时</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="secret">保密</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="empty_data">没有数据哦</string>
    <string name="link_status">连接状态</string>
    <string name="power_status">电源状态</string>
    <string name="datefmt_within_a_minute">刚刚</string>
    <string name="datefmt_within_an_hour">%s分钟前</string>
    <string name="datefmt_within_a_day">%s小时前</string>
    <string name="datefmt_within_a_week">%s天前</string>
    <string name="datefmt_gt_a_week">yyyy-MM-dd</string>
    <string name="datefmt_whats_week">星期%s</string>
    <string name="datefmt_whats_month">%s月</string>
    <string name="datefmt_whats_year">%s年</string>
    <string name="datefmt_whats_hour">H:00</string>
    <string name="date_today">今天</string>
    <string name="date_yesterday">昨天</string>
    <string name="datefmt_MM_dd">MM.dd</string>
    <string name="title_special_test">专项测试</string>
    <string name="dialog_wait">请稍候...</string>
    <string name="test">测试</string>
    <string name="test_unknown_product">未知的护肤品</string>
    <string name="test_in_hour">小时</string>
    <string name="test_in_day">按日</string>
    <string name="test_in_month">按月</string>
    <string name="test_get_hardware">获取硬件</string>
    <string name="test_conn_device">连接设备</string>
    <string name="test_skin">肤质测试</string>
    <string name="test_daily">日常测试</string>
    <string name="test_taste">护肤品测试</string>
    <string name="test_microscope">皮肤显微镜</string>
    <string name="test_history">历史记录</string>
    <string name="test_flatness">平整度</string>
    <string name="test_acne">痤疮</string>
    <string name="test_splash">色斑</string>
    <string name="test_wrinkles">皱纹</string>
    <string name="test_pore">毛孔</string>
    <string name="test_total">总分</string>
    <string name="test_water">水分</string>
    <string name="test_oil">油分</string>
    <string name="test_eastic">弹性</string>
    <string name="test_whitening">美白</string>
    <string name="test_sensitive">敏感</string>
    <string name="test_water_english">water</string>
    <string name="test_oil_english">oil</string>
    <string name="test_eastic_english">eastic</string>
    <string name="test_sensitive_english">sensitive</string>
    <string name="test_whitening_english">whitening</string>
    <string name="test_pore_english">pore</string>
    <string name="test_continue_test">再测一次</string>
    <string name="test_confirm_taking_clear">请确认图像是否清晰</string>
    <string name="test_taking">拍照测试</string>
    <string name="test_face_image">脸部皮肤图像</string>
    <string name="test_epidermis">表皮图像</string>
    <string name="test_genuine">真皮图像</string>
    <string name="test_retaking">重 拍</string>
    <string name="test_next">下一步</string>
    <string name="test_see_result">查看结果</string>
    <string name="taking_title">%s皮肤图像</string>
    <string name="test_dry_skin">干性肤质</string>
    <string name="test_dry_skin_detail">干性皮肤角质层薄，油脂较少，易敏感、产生细纹。护肤时注意补充水分，涂抹一些动植物油脂帮助锁水。</string>
    <string name="test_dry_skin_detail1">干性皮肤角质层薄，油脂较少，</string>
    <string name="test_dry_skin_detail2">易敏感、产生细纹。</string>
    <string name="test_dry_skin_detail3">护肤时注意补充水分，</string>
    <string name="test_dry_skin_detail4">涂抹一些动植物油脂帮助锁水。</string>
    <string name="test_middle_skin">混合肤质</string>
    <string name="test_middle_skin_detail">混合性皮肤兼有油性和干性两种特点。通常T区呈油性，U区呈干性。平时应保持出油部位清洁，并补充干燥部位水分。</string>
    <string name="test_middle_skin_detail1">混合性皮肤兼有油性和干性两种特点。</string>
    <string name="test_middle_skin_detail2">通常T区呈油性，U区呈干性。</string>
    <string name="test_middle_skin_detail3">平时应保持出油部位清洁，</string>
    <string name="test_middle_skin_detail4">并补充干燥部位水分。</string>
    <string name="test_oil_skin">油性肤质</string>
    <string name="test_oil_skin_detail">油性皮肤皮脂分泌旺盛，毛孔较粗，容易长痘。平时应注意洁面，保持皮肤清爽，同时注意保湿。</string>
    <string name="test_oil_skin_detail1">油性皮肤皮脂分泌旺盛，</string>
    <string name="test_oil_skin_detail2">毛孔较粗，容易长痘。</string>
    <string name="test_oil_skin_detail3">平时应注意洁面，</string>
    <string name="test_oil_skin_detail4">保持皮肤清爽，同时注意保湿。</string>
    <string name="oil_eval_01">少油</string>
    <string name="oil_eval_02">适中</string>
    <string name="oil_eval_03">偏油</string>
    <string name="wat_eval_01">偏干</string>
    <string name="wat_eval_02">良好</string>
    <string name="wat_eval_03">充盈</string>
    <string name="wat_very_good">水嫩润泽</string>
    <string name="eas_eval_01">一般</string>
    <string name="eas_eval_02">较好</string>
    <string name="eas_eval_03">极好</string>
    <string name="eas_very_good">Q弹紧致</string>
    <string name="por_eval_01">较粗</string>
    <string name="por_eval_02">适中</string>
    <string name="por_eval_03">细腻</string>
    <string name="por_very_good">光滑细腻</string>
    <string name="whi_eval_01">一般</string>
    <string name="whi_eval_02">较白</string>
    <string name="whi_eval_03">嫩白</string>
    <string name="whi_very_good">白皙洁净</string>
    <string name="sen_eval_01">高</string>
    <string name="sen_eval_02">适中</string>
    <string name="sen_eval_03">不敏感</string>
    <string name="diff_eval_01">没有效果</string>
    <string name="diff_eval_02">效果不错</string>
    <string name="diff_eval_03">显著改善</string>
    <string name="diff_eval_04">显著改善</string>
    <string name="test_eval_supp">自然健康</string>
    <string name="test_eval_skin">肌肤%1$s，%2$s。</string>
    <string name="test_eval_low">一起开始护肤美颜吧！</string>
    <string name="test_please_check_device">请检查设备或WIFI状态</string>
    <string name="test_ble_dis_msg">未连接到设备。连接遇到问题？</string>
    <string name="test_wifi_dis_msg">设备与网络已断开连接，查看帮助</string>
    <string name="test_device_noready">设备还未准备就绪，稍等一下...</string>
    <string name="test_smart_skin_detector">智能皮肤检测仪</string>
    <string name="test_skin_tips">T区和U区的水油状况能帮助我们判断肤质类型。点点护肤的设备通过对额头和脸颊的图像分析，两步测出你的肤质。</string>
    <string name="test_skin_test_text">测测我的肤质</string>
    <string name="test_daily_current_plan">当前护肤方案</string>
    <string name="test_daily_contrast_health">对比健康肌肤</string>
    <string name="microscope_title">皮肤显微镜</string>
    <string name="microscope_see_my_skin">查看我的皮肤</string>
    <string name="daily_title">日常测试</string>
    <string name="daily_result_my_score">我的得分</string>
    <string name="daily_close">关闭</string>
    <string name="normal_real_time">实时图像</string>
    <string name="normal_forehead">额头</string>
    <string name="normal_cheek">脸颊</string>
    <string name="normal_eye">眼部</string>
    <string name="normal_nose">鼻子</string>
    <string name="normal_hand">手部</string>
    <string name="normal_face_test">脸颊测试</string>
    <string name="normal_result_title">日常测试结果</string>
    <string name="normal_result_current_value">当前值</string>
    <string name="normal_result_same_age_avg">同龄人群平均值</string>
    <string name="normal_result_last_reduce">比上次降低</string>
    <string name="normal_result_skin_age">肌肤年龄</string>
    <string name="normal_result_balance">水油平衡,肤质很好</string>
    <string name="skin_title">肤质测试</string>
    <string name="skin_result_title">肤质测试结果</string>
    <string name="skin_need_test_what_part">还需要测试第%s个部位</string>
    <string name="skin_goto_bbs_gan">去社区讨论干性肤质的护理</string>
    <string name="skin_goto_bbs_zhong">去社区讨论混合性肤质的护理</string>
    <string name="skin_goto_bbs_you">去社区讨论油性肤质的护理</string>
    <string name="skin_please_choose_part">请选择第%s个测试部位</string>
    <string name="taste_title">护肤品测试</string>
    <string name="taste_result_title">护肤品测试结果</string>
    <string name="taste_category">测试类别(多选)</string>
    <string name="taste_tip1">用科学的数据向您展示肌肤在</string>
    <string name="taste_tip2">使用护肤品前后的对比情况</string>
    <string name="taste_input_taste">请输入护肤品名称</string>
    <string name="taste_record_taste">记录一下这次用了什么吧~</string>
    <string name="taste_start_test">开始测试</string>
    <string name="taste_use_before_test">使用前测试</string>
    <string name="taste_use_after_test">使用后测试</string>
    <string name="taste_use_before_taste">护肤品使用前</string>
    <string name="taste_use_after_taste">护肤品使用后</string>
    <string name="taste_use_before">用前</string>
    <string name="taste_use_after">用后</string>
    <string name="taste_use_taste_before">使用护肤品之前</string>
    <string name="taste_use_taste_after">使用护肤品之后</string>
    <string name="taste_retest">重新测试</string>
    <string name="taste_ascension">提升</string>
    <string name="taste_falling">下降</string>
    <string name="taste_result_tips">测试部位：%1$s %2$s</string>
    <string name="taste_result_format">yyyy-MM-dd</string>
    <string name="taste_result_more_args">更多参数</string>
    <string name="taste_clear_history">清除历史记录</string>
    <string name="taste_not_history">无历史记录</string>
    <string name="taste_filling_water">补水效果</string>
    <string name="taste_control_oil">控油效果</string>
    <string name="taste_whitening">美白效果</string>
    <string name="taste_effect">效果</string>
    <string name="history_title">测试记录</string>
    <string name="history_week_date_format">MM月dd日</string>
    <string name="history_day_day">%1$s - %2$s</string>
    <string name="main_topic">话题</string>
    <string name="main_test">测试</string>
    <string name="main_found">发现</string>
    <string name="main_mine">我的</string>
    <string name="main_develop">开发</string>
    <string name="main_homepage">主页</string>
    <string name="main_book">通讯录</string>
    <string name="mine_personal_data">个人资料</string>
    <string name="mine_my_speak">我的发言</string>
    <string name="mine_my_start_topic">我发起的话题</string>
    <string name="mine_my_care_plan">我的护肤方案</string>
    <string name="mine_my_focus">我的关注</string>
    <string name="mine_my_device">我的设备</string>
    <string name="mine_my_collected">我的收藏</string>
    <string name="mine_my_health_data">我的健康数据</string>
    <string name="mine_my_message">我的消息</string>
    <string name="mine_setting">设置</string>
    <string name="mine_focus">关注</string>
    <string name="mine_fans">粉丝</string>
    <string name="focusfans_title_focus">我的关注</string>
    <string name="focusfans_title_fans">我的粉丝</string>
    <string name="focusfans_my_focuson">我关注的</string>
    <string name="focusfans_my_fans">我的粉丝</string>
    <string name="focusfans_cancel_focus">取消</string>
    <string name="focusfans_focus_fans">关注</string>
    <string name="info_title">个人信息</string>
    <string name="info_gender">性别</string>
    <string name="info_userid">用户名</string>
    <string name="info_header">头像</string>
    <string name="info_nick_name">昵称</string>
    <string name="info_bind_phone">绑定手机</string>
    <string name="info_amend_password">修改密码</string>
    <string name="info_bind_email">绑定邮箱</string>
    <string name="info_age_area">年龄段</string>
    <string name="info_location">地区</string>
    <string name="info_skin">肤质</string>
    <string name="info_photo">相册</string>
    <string name="name_email_register">用户名/邮箱注册</string>
    <string name="phone_register">手机号注册</string>
    <string name="phone">手机号</string>
    <string name="register_sms_code">短信验证码</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="register_password">密码 (数字加字母, 不少于8位)</string>
    <string name="next_step">下一步</string>
    <string name="ble_open_link_text">进一步了解Radar</string>
    <string name="ble_open_start_scan">开始配对</string>
    <string name="dialog_clear_info_title">解除配对后下次需要重新配对</string>
    <string name="dialog_clear_info_clear">确认清除配对</string>
    <string name="dialog_clear_info_cancel">取消</string>
    <string name="start_use">开始使用</string>
    <string name="my_score">我的评分</string>
    <string name="app_name">点点美肤</string>
</resources>