<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        style="@style/RadarText"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFD1D1"
        android:gravity="left|top"
        android:paddingLeft="@dimen/skin_special_label_padding_l"
        android:paddingTop="@dimen/skin_special_label_padding_t"
        android:text="@string/test_skin" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            style="@style/RadarText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#FF4FE3C1"
            android:gravity="left|top"
            android:paddingLeft="@dimen/skin_special_label_padding_l"
            android:paddingTop="@dimen/skin_special_label_padding_t"
            android:text="@string/test_taste" />

        <Button
            style="@style/RadarText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#FFA4DE65"
            android:gravity="left|top"
            android:paddingLeft="@dimen/skin_special_label_padding_l"
            android:paddingTop="@dimen/skin_special_label_padding_t"
            android:text="@string/test_flatness" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            style="@style/RadarText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#FFFF5F5F"
            android:gravity="left|top"
            android:paddingLeft="@dimen/skin_special_label_padding_l"
            android:paddingTop="@dimen/skin_special_label_padding_t"
            android:text="@string/test_acne" />

        <Button
            style="@style/RadarText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#FF4990E2"
            android:gravity="left|top"
            android:paddingLeft="@dimen/skin_special_label_padding_l"
            android:paddingTop="@dimen/skin_special_label_padding_t"
            android:text="@string/test_splash" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            style="@style/RadarText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#FFB9B9B7"
            android:gravity="left|top"
            android:paddingLeft="@dimen/skin_special_label_padding_l"
            android:paddingTop="@dimen/skin_special_label_padding_t"
            android:text="@string/test_wrinkles" />

        <Button
            style="@style/RadarText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#FFF5A623"
            android:gravity="left|top"
            android:paddingLeft="@dimen/skin_special_label_padding_l"
            android:paddingTop="@dimen/skin_special_label_padding_t"
            android:text="@string/test_pore" />
    </LinearLayout>

</LinearLayout>