<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_1_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/login_title_margin_top" >

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="@dimen/login_title_btn_size"
            android:layout_height="@dimen/login_title_btn_size"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/login_title_btn_left"
            android:background="@drawable/btn_back_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/phone_register"
            android:textColor="#464646"
            android:textSize="@dimen/login_title_text_size" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_logo_margin_top"
        android:src="@drawable/welcome_logo" />

    <TextView
        android:id="@+id/tv_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textColor="#464646"
        android:textSize="12sp" />

    <RelativeLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_input_layout_h"
        android:layout_below="@id/tv_appname"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/test_button_padding_l_r"
        android:layout_marginRight="@dimen/test_button_padding_l_r"
        android:layout_marginTop="@dimen/default_input_left"
        android:background="@drawable/bg_edit_shadow_input" >

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/login_input_margin_l_r"
            android:layout_marginRight="@dimen/login_input_margin_l_r"
            android:background="@null"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/default_edit_text_color"
            android:textColorHint="@color/default_text_color"
            android:textSize="@dimen/login_warning_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sms_layout"
        android:layout_width="@dimen/login_input_layout_w"
        android:layout_height="@dimen/login_input_layout_h"
        android:layout_below="@id/username_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/test_button_padding_l_r"
        android:layout_marginRight="@dimen/test_button_padding_l_r"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_shadow_input_two" >

        <Button
            android:id="@+id/btn_get_smsCode"
            android:layout_width="90dip"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_test_global"
            android:gravity="center"
            android:text="@string/get_sms_code"
            android:textColor="#ffffff"
            android:textSize="@dimen/login_warning_text_size"
            android:visibility="visible" />

        <EditText
            android:id="@+id/et_smsCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/login_input_margin_l_r"
            android:layout_toLeftOf="@+id/btn_get_smsCode"
            android:background="@null"
            android:hint="@string/register_sms_code"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/default_edit_text_color"
            android:textColorHint="@color/default_text_color"
            android:textSize="@dimen/login_warning_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password_layout"
        android:layout_width="@dimen/login_input_layout_w"
        android:layout_height="@dimen/login_input_layout_h"
        android:layout_below="@id/sms_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/test_button_padding_l_r"
        android:layout_marginRight="@dimen/test_button_padding_l_r"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_shadow_input" >

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/login_input_margin_l_r"
            android:layout_marginRight="@dimen/login_input_margin_l_r"
            android:background="@null"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:textColor="@color/default_edit_text_color"
            android:textColorHint="@color/default_text_color"
            android:textSize="@dimen/login_warning_text_size" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_error_hine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:layout_marginLeft="@dimen/test_button_padding_l_r"
        android:layout_marginRight="@dimen/test_button_padding_l_r"
        android:paddingBottom="@dimen/default_dot_size"
        android:paddingTop="@dimen/default_dot_size"
        android:text="密码错误"
        android:visibility="invisible"
        android:textColor="@color/hlep_text_normal"
        android:textSize="@dimen/test_normal_real_time_text_size" />

    <LinearLayout
        android:id="@+id/start_layout"
        android:layout_width="@dimen/login_input_layout_w"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_error_hine"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/test_button_padding_l_r"
        android:layout_marginRight="@dimen/test_button_padding_l_r"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_input_layout_h"
            android:layout_weight="1.0"
            android:background="@drawable/btn_test_global"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="@color/whilte"
            android:textSize="@dimen/login_title_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_common_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_layout"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:text="@string/name_email_register"
        android:textColor="@color/helper_text_color"
        android:textSize="@dimen/login_warning_text_size" />

</RelativeLayout>